# noaa-cdo-api

./: README.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml
docs/: index.html  noaa_api.html  noaa_cdo_api.html  search.js
docs/noaa_api/: json_responses.html  json_schemas.html  parameter_schemas.html
docs/noaa_cdo_api/: json_responses.html  json_schemas.html  parameter_schemas.html
manual_tests/: data.py  datacategories.py  datasets.py  datatypes.py  locationcategories.py  locations.py  log_setup.py  run_manual_tests.py  stations.py  validate_json.py
manual_tests/sample_responses/datacategories/: datacategories-id.json
manual_tests/sample_responses/datasets/: datasets-id.json  datasets.json
noaa_api/: __init__.py  json_responses.py  json_schemas.py  json_schemas.pyi  noaa.py  noaa.pyi  parameter_schemas.py  parameter_schemas.pyi
noaa_cdo_api/: __init__.py  noaa.py
sample_responses/data/: data.json
sample_responses/datacategories/: datacategories.json
sample_responses/datasets/: datasets-id.json  datasets.json
sample_responses/datatypes/: datatypes-id.json  datatypes.json
sample_responses/locationcategories/: locationcategories-id.json  locationcategories.json
sample_responses/locations/: locations-id.json  locations.json
sample_responses/stations/: stations-id.json  stations.json
typings/noaa_cdo_api/: __init__.pyi  json_responses.pyi  json_schemas.pyi  noaa.pyi  parameter_schemas.pyi
