[build-system]
requires = ["setuptools >= 78.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noaa-api"
version = "0.0.1"
description = "A NOAA NCEI API wrapper for weather data"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E"]
authors = [{ name = "FuexFollets", email = "fuex9follets@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "aiolimiter>=1.2.1",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "setuptools>=78.1.0",
]

[project.urls]
Homepgae = "https://github.com/FuexFollets/noaa-api"
Documentation = "https://fuexfollets.github.io/noaa-api/noaa_api.html"
Issues = "https://github.com/FuexFollets/noaa-api/issues"

[dependency-groups]
dev = [
    "debugpy>=1.8.13",
    "dotenv>=0.9.9",
    "ipython>=9.0.2",
    "mypy>=1.15.0",
    "pdoc>=15.0.1",
    "ruff>=0.11.2",
]

[tool.ruff]
extend-exclude = ["tests/", "**/*.pyi"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # pycodestyle
    "UP",  # pyupgrade
    "I",   # Sort imports
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "Q",   # flake8-quotes
]

[tool.setuptools]
packages = ["noaa_api", "manual_tests"]
